basic nav styling

--- a/users.html
+++ b/users.html
@@ -18,7 +18,7 @@
         <a href="#">Logout</a>
       </div>
     </nav>
-    <h1>LOGIN</h1>
+    <h1>USERS</h1>
   </body>
   <script src="./scripts/script.js"></script>
 </html>
