orders and products page built

--- a/orders.html
+++ b/orders.html
@@ -18,7 +18,75 @@
         <a href="#">Logout</a>
       </div>
     </nav>
-    <h1>ORDERS</h1>
+    <div class="content">
+      <h1>ORDERS</h1>
+      <div class="main-section">
+        <div class="sidebar">
+          <h2>FILTERS</h2>
+          <h4>Count: <span class="count-data">100</span></h4>
+          <label for="new"
+            ><input type="checkbox" name="new" id="" /> New</label
+          >
+          <label for="packed"
+            ><input type="checkbox" name="packed" id="" /> Packed</label
+          >
+          <label for="InTransit"
+            ><input type="checkbox" name="InTransit" id="" /> InTransit</label
+          >
+          <label for="Delivered"
+            ><input type="checkbox" name="Delivered" id="" /> Delivered</label
+          >
+        </div>
+        <div class="details">
+          <div class="column-names">
+            <h3>ID</h3>
+            <h3>Customer</h3>
+            <h3>Date</h3>
+            <h3>Amount</h3>
+            <h3>Status</h3>
+          </div>
+          <!-- ! first card -->
+          <div class="order-card card">
+            <div class="id"><p class="id-data">752-42-3160</p></div>
+            <div class="customer">
+              <p class="customer-data">Emmery Grizard</p>
+            </div>
+            <div class="date">
+              <p class="date-data">11 Mar, 2020</p>
+              <p class="time-data">3:14 PM</p>
+            </div>
+            <div class="amount"><p class="amount-data">$518.23</p></div>
+            <div class="status"><p class="status-data">New</p></div>
+          </div>
+          <!-- ! second card -->
+          <div class="order-card card">
+            <div class="id"><p class="id-data">752-42-3160</p></div>
+            <div class="customer">
+              <p class="customer-data">Emmery Grizard</p>
+            </div>
+            <div class="date">
+              <p class="date-data">11 Mar, 2020</p>
+              <p class="time-data">3:14 PM</p>
+            </div>
+            <div class="amount"><p class="amount-data">$518.23</p></div>
+            <div class="status"><p class="status-data">New</p></div>
+          </div>
+          <!-- ! third card -->
+          <div class="order-card card">
+            <div class="id"><p class="id-data">752-42-3160</p></div>
+            <div class="customer">
+              <p class="customer-data">Emmery Grizard</p>
+            </div>
+            <div class="date">
+              <p class="date-data">11 Mar, 2020</p>
+              <p class="time-data">3:14 PM</p>
+            </div>
+            <div class="amount"><p class="amount-data">$518.23</p></div>
+            <div class="status"><p class="status-data">New</p></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="./scripts/script.js"></script>
 </html>
