--- a/products.html
+++ b/products.html
@@ -18,7 +18,76 @@
         <a href="#">Logout</a>
       </div>
     </nav>
-    <h1>PRODUCTS</h1>
+    <div class="content">
+      <h1>PRODUCTS</h1>
+      <div class="main-section">
+        <div class="sidebar">
+          <h2>FILTERS</h2>
+          <h4>Count: <span class="count-data">100</span></h4>
+          <label for="expired"
+            ><input type="checkbox" name="expired" id="" /> expired</label
+          >
+          <label for="low stock"
+            ><input type="checkbox" name="low stock" id="" /> low stock</label
+          >
+        </div>
+        <div class="details-product">
+          <div class="column-names">
+            <h3>ID</h3>
+            <h3>Product Name</h3>
+            <h3>Product Brand</h3>
+            <h3>Expiry Date</h3>
+            <h3>Unit Price</h3>
+            <h3>stock</h3>
+          </div>
+          <!-- ! first card -->
+          <div class="product-card card">
+            <div class="id"><p class="id-data">752-42-3160</p></div>
+            <div class="product-name">
+              <p class="product-name-data">Miconazole Nitrate</p>
+            </div>
+            <div class="product-brand">
+              <p class="product-brand-data">Premier Brands of America Inc.</p>
+            </div>
+            <div class="expiry-date">
+              <p class="expiry-date-data">14 Aug, 2012</p>
+            </div>
+            <div class="unit-price"><p class="unit-price-data">$993.01</p></div>
+            <div class="stock"><p class="stock-data">725</p></div>
+          </div>
+          <!-- ! second card -->
+          <div class="product-card card">
+            <div class="id"><p class="id-data">752-42-3160</p></div>
+            <div class="product-name">
+              <p class="product-name-data">Miconazole Nitrate</p>
+            </div>
+            <div class="product-brand">
+              <p class="product-brand-data">Premier Brands of America Inc.</p>
+            </div>
+            <div class="expiry-date">
+              <p class="expiry-date-data">14 Aug, 2012</p>
+            </div>
+            <div class="unit-price"><p class="unit-price-data">$993.01</p></div>
+            <div class="stock"><p class="stock-data">725</p></div>
+          </div>
+          <!-- ! third card -->
+          <div class="product-card card">
+            <div class="id"><p class="id-data">752-42-3160</p></div>
+            <div class="product-name">
+              <p class="product-name-data">Miconazole Nitrate</p>
+            </div>
+            <div class="product-brand">
+              <p class="product-brand-data">Premier Brands of America Inc.</p>
+            </div>
+            <div class="expiry-date">
+              <p class="expiry-date-data">14 Aug, 2012</p>
+            </div>
+            <div class="unit-price"><p class="unit-price-data">$993.01</p></div>
+            <div class="stock"><p class="stock-data">725</p></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="./scripts/script.js"></script>
 </html>
