--- a/users.html
+++ b/users.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/users.css" />
     <title>Assessment</title>
   </head>
   <body>
@@ -18,7 +19,38 @@
         <a href="#">Logout</a>
       </div>
     </nav>
-    <h1>USERS</h1>
+    <div class="UserList_PageWrapper__11jYV">
+      <h1 class="UserList_MainHeading__1Ntqz">USERS</h1>
+    <div class="UserList_OrdersWrapper__8eEvi">
+      <form class="UserList_FilterWrapper__39u8A">
+        <input class="UserList_SearchBox__BG9wr" type="search" placeholder="Search by Name">
+        <input type="reset" class="UserList_Button__1ygGK" value="Reset">
+      </form>
+      <section>
+       <table class="UserList_OrderTable__1cnvQ">
+         <tr>
+           <th>ID</th>
+           <th>User Avatar</th>
+           <th>Full Name</th>
+           <th style="min-width: 100px;">DoB</th>
+           <th>Gender</th>
+           <th>Current Location</th>
+         </tr>
+          <tbody>
+            <tr class="UserList_TableRow__2DK3e ">
+              <td class="UserList_SecondaryText__3UV5v">1</td>
+              <td class="UserList_PrimaryText__38Hc_">
+                <img src="https://robohash.org/estinvoluptas.jpg?size=50x50&amp;set=set1" alt="Profile Pic">
+              </td>
+              <td class="UserList_SecondaryText__3UV5v">Clementius McGillreich</td>
+              <td class="UserList_PrimaryText__38Hc_">20 Feb, 1997</td><td class="UserList_SecondaryText__3UV5v">Male</td>
+              <td class="UserList_SecondaryText__3UV5v">Bayambang, Philippines</td>
+            </tr>
+          </tbody>
+          </table>
+    </div>
+    </div>    
+    
   </body>
   <script src="./scripts/script.js"></script>
 </html>
