--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <title>Assessment</title>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="left-span">
-        <div class="logo"><h2>Kafene</h2></div>
-        <a href="./orders.html">Orders</a>
-        <a href="./products.html">Products</a>
-        <a href="./users.html">Users</a>
+    <div class="Topbar_Topbar__2is_u">
+      <div class="Topbar_LeftMenu__3tQ_2">
+        <div class="Topbar_LogoWrapper__2hwwN">
+          <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
+          <p class="Topbar_BrandName__2xXd6">Kafene</p>
+        </div>
+        <nav>
+          <a class="Topbar_MenuItem__3QSLp Topbar_Active__uCUUs" href="./orders.html">Orders</a>
+          <a class="Topbar_MenuItem__3QSLp " href="./products.html">Products</a>
+          <a class="Topbar_MenuItem__3QSLp " href="./users.html">Users</a>
+        </nav>
       </div>
+      <a class="Topbar_MenuItem__3QSLp" href="">Logout</a>
+    </div>
       <div class="right-span">
         <a href="#">Logout</a>
       </div>
