--- a/users.html
+++ b/users.html
@@ -7,19 +7,23 @@
     <title>Assessment</title>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="left-span">
-        <div class="logo"><h2>Kafene</h2></div>
-        <a href="./orders.html">Orders</a>
-        <a href="./products.html">Products</a>
-        <a href="./users.html">Users</a>
+    <div class="Topbar_Topbar__2is_u">
+      <div class="Topbar_LeftMenu__3tQ_2">
+        <div class="Topbar_LogoWrapper__2hwwN">
+          <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
+          <p class="Topbar_BrandName__2xXd6">Kafene</p>
+        </div>
+        <nav>
+          <a class="Topbar_MenuItem__3QSLp Topbar_Active__uCUUs" href="./orders.html">Orders</a>
+          <a class="Topbar_MenuItem__3QSLp " href="./products.html">Products</a>
+          <a class="Topbar_MenuItem__3QSLp " href="./users.html">Users</a>
+        </nav>
       </div>
-      <div class="right-span">
-        <a href="#">Logout</a>
-      </div>
-    </nav>
+      <a class="Topbar_MenuItem__3QSLp" href="">Logout</a>
+    </div>
     <div class="UserList_PageWrapper__11jYV">
-      <h1 class="UserList_MainHeading__1Ntqz">USERS</h1>
+      
+      <h1 class="UserList_MainHeading__1Ntqz">Users</h1>
     <div class="UserList_OrdersWrapper__8eEvi">
       <form class="UserList_FilterWrapper__39u8A">
         <input class="UserList_SearchBox__BG9wr" type="search" placeholder="Search by Name">
