--- a/index.html
+++ b/index.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/main.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Assessment</title>
   </head>
   <body>
-    <div class="Topbar_Topbar__2is_u">
-      <div class="Topbar_LeftMenu__3tQ_2">
-        <div class="Topbar_LogoWrapper__2hwwN">
+    <div class="Topbar">
+      <div class="Topbar_LeftMenu">
+        <div class="Topbar_LogoWrapper">
           <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
-          <p class="Topbar_BrandName__2xXd6">Kafene</p>
+          <p class="Topbar_BrandName">Kafene</p>
         </div>
         <nav>
-          <a class="Topbar_MenuItem__3QSLp Topbar_Active__uCUUs" href="./orders.html">Orders</a>
-          <a class="Topbar_MenuItem__3QSLp " href="./products.html">Products</a>
-          <a class="Topbar_MenuItem__3QSLp " href="./users.html">Users</a>
+          <a class="Topbar_MenuItem Topbar_Active" href="./orders.html">Orders</a>
+          <a class="Topbar_MenuItem" href="./products.html">Products</a>
+          <a class="Topbar_MenuItem" href="./users.html">Users</a>
         </nav>
       </div>
-      <a class="Topbar_MenuItem__3QSLp" href="">Logout</a>
+      <a class="Topbar_MenuItem" href="">Logout</a>
     </div>
-      <div class="right-span">
-        <a href="#">Logout</a>
+    <main class=" MainContainer">
+      <div>
+        <form class="LoginPage_LoginForm">
+          <h1>Sign In</h1>
+          <input class="LoginPage_InputField" type="text" name="username" placeholder="Enter Username">
+          <input class="LoginPage_InputField" type="password" name="password" placeholder="Enter Password">
+          <input class="LoginPage_Button7" type="submit" value="Login">
+        </form>
       </div>
-    </nav>
-    <h1>LOGIN</h1>
+    </main>
   </body>
   <script src="./scripts/script.js"></script>
 </html>
