--- a/orders.html
+++ b/orders.html
@@ -4,49 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/main.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Assessment</title>
   </head>
   <body>
-    <div class="Topbar_Topbar__2is_u">
-      <div class="Topbar_LeftMenu__3tQ_2">
-        <div class="Topbar_LogoWrapper__2hwwN">
+    <div class="Topbar">
+      <div class="Topbar_LeftMenu">
+        <div class="Topbar_LogoWrapper">
           <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
-          <p class="Topbar_BrandName__2xXd6">Kafene</p>
+          <p class="Topbar_BrandName">Kafene</p>
         </div>
         <nav>
-          <a class="Topbar_MenuItem__3QSLp Topbar_Active__uCUUs" href="./orders.html">Orders</a>
-          <a class="Topbar_MenuItem__3QSLp " href="./products.html">Products</a>
-          <a class="Topbar_MenuItem__3QSLp " href="./users.html">Users</a>
+          <a class="Topbar_MenuItem Topbar_Active" href="./orders.html">Orders</a>
+          <a class="Topbar_MenuItem" href="./products.html">Products</a>
+          <a class="Topbar_MenuItem" href="./users.html">Users</a>
         </nav>
       </div>
-      <a class="Topbar_MenuItem__3QSLp" href="">Logout</a>
+      <a class="Topbar_MenuItem" href="">Logout</a>
     </div>
-    <main class="App_MainContainer__Fvvih"><div class="Homepage_PageWrapper__35FDy">
-      <h1 class="Homepage_MainHeading__3eRiM">Orders</h1>
-      <div class="Homepage_OrdersWrapper__A-VhO">
-        <div class="Homepage_FilterWrapper__2PcDK"><h3>Filters</h3>
-          <div class="Homepage_FilterOptions__wNuP7">
+    <main class="MainContainer">
+      <div class="Homepage_PageWrapper">
+      <h1 class="Homepage_MainHeading">Orders</h1>
+      <div class="Homepage_OrdersWrapper">
+        <div class="Homepage_FilterWrapper"><h3>Filters</h3>
+          <div class="Homepage_FilterOptions">
             <p>Count: 100</p>
-            <label class="Homepage_FilterCheckbox__2-zv7">
+            <label class="Homepage_FilterCheckbox">
               <input type="checkbox" name="orders-new" checked="">
               New
             </label>
-            <label class="Homepage_FilterCheckbox__2-zv7">
+            <label class="Homepage_FilterCheckbox">
               <input type="checkbox" name="orders-packed" checked="">
               Packed
             </label>
-            <label class="Homepage_FilterCheckbox__2-zv7">
+            <label class="Homepage_FilterCheckbox">
               <input type="checkbox" name="orders-transit" checked="">
               InTransit
             </label>
-            <label class="Homepage_FilterCheckbox__2-zv7">
+            <label class="Homepage_FilterCheckbox">
               <input type="checkbox" name="orders-delivered" checked="">
               Delivered
             </label>
           </div>
         </div>
         <div style="width: 100%;">
-          <table class="Homepage_OrderTable__1DHO-">
+          <table class="Homepage_OrderTable">
             <tr>
               <th>ID</th>
               <th>Customer</th>
@@ -55,14 +57,14 @@
               <th>Status</th>
             </tr>
             <tbody>
-              <tr class="Homepage_TableRow__cSO9_">
-                <td class="Homepage_SecondaryText__1or5Q">714-69-5617</td>
-                <td class="Homepage_PrimaryText__1PVTP">Sally Whebell</td>
-                <td class="Homepage_PrimaryText__1PVTP">07 Aug, 2020 <br>
-                  <span class="Homepage_SecondaryText__1or5Q">2:29 AM</span>
+              <tr class="Homepage_TableRow">
+                <td class="Homepage_SecondaryText">714-69-5617</td>
+                <td class="Homepage_PrimaryText">Sally Whebell</td>
+                <td class="Homepage_PrimaryText">07 Aug, 2020 <br>
+                  <span class="Homepage_SecondaryText">2:29 AM</span>
                 </td>
-                <td class="Homepage_SecondaryText__1or5Q">$634.2</td>
-                <td class="Homepage_PrimaryText__1PVTP">Delivered</td>
+                <td class="Homepage_SecondaryText">$634.2</td>
+                <td class="Homepage_PrimaryText">Delivered</td>
               </tr>
             </tbody>
           </table>
