--- a/users.html
+++ b/users.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/main.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Assessment</title>
   </head>
   <body>
-    <div class="Topbar_Topbar__2is_u">
-      <div class="Topbar_LeftMenu__3tQ_2">
-        <div class="Topbar_LogoWrapper__2hwwN">
+    <div class="Topbar">
+      <div class="Topbar_LeftMenu">
+        <div class="Topbar_LogoWrapper">
           <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
-          <p class="Topbar_BrandName__2xXd6">Kafene</p>
+          <p class="Topbar_BrandName">Kafene</p>
         </div>
         <nav>
-          <a class="Topbar_MenuItem__3QSLp Topbar_Active__uCUUs" href="./orders.html">Orders</a>
-          <a class="Topbar_MenuItem__3QSLp " href="./products.html">Products</a>
-          <a class="Topbar_MenuItem__3QSLp " href="./users.html">Users</a>
+          <a class="Topbar_MenuItem Topbar_Active" href="./orders.html">Orders</a>
+          <a class="Topbar_MenuItem" href="./products.html">Products</a>
+          <a class="Topbar_MenuItem" href="./users.html">Users</a>
         </nav>
       </div>
-      <a class="Topbar_MenuItem__3QSLp" href="">Logout</a>
+      <a class="Topbar_MenuItem" href="">Logout</a>
     </div>
-    <div class="UserList_PageWrapper__11jYV">
+    <div class="UserList_PageWrapper">
       
-      <h1 class="UserList_MainHeading__1Ntqz">Users</h1>
-    <div class="UserList_OrdersWrapper__8eEvi">
-      <form class="UserList_FilterWrapper__39u8A">
-        <input class="UserList_SearchBox__BG9wr" type="search" placeholder="Search by Name">
-        <input type="reset" class="UserList_Button__1ygGK" value="Reset">
+      <h1 class="UserList_MainHeading">Users</h1>
+    <div class="UserList_OrdersWrapper">
+      <form class="UserList_FilterWrapper">
+        <input class="UserList_SearchBox" type="search" placeholder="Search by Name">
+        <input type="reset" class="UserList_Button" value="Reset">
       </form>
       <section>
-       <table class="UserList_OrderTable__1cnvQ">
+       <table class="UserList_OrderTable">
          <tr>
            <th>ID</th>
            <th>User Avatar</th>
@@ -40,14 +41,14 @@
            <th>Current Location</th>
          </tr>
           <tbody>
-            <tr class="UserList_TableRow__2DK3e ">
-              <td class="UserList_SecondaryText__3UV5v">1</td>
-              <td class="UserList_PrimaryText__38Hc_">
+            <tr class="UserList_TableRow">
+              <td class="UserList_SecondaryText">1</td>
+              <td class="UserList_PrimaryText">
                 <img src="https://robohash.org/estinvoluptas.jpg?size=50x50&amp;set=set1" alt="Profile Pic">
               </td>
-              <td class="UserList_SecondaryText__3UV5v">Clementius McGillreich</td>
-              <td class="UserList_PrimaryText__38Hc_">20 Feb, 1997</td><td class="UserList_SecondaryText__3UV5v">Male</td>
-              <td class="UserList_SecondaryText__3UV5v">Bayambang, Philippines</td>
+              <td class="UserList_SecondaryText">Clementius McGillreich</td>
+              <td class="UserList_PrimaryText">20 Feb, 1997</td><td class="UserList_SecondaryText__3UV5v">Male</td>
+              <td class="UserList_SecondaryText">Bayambang, Philippines</td>
             </tr>
           </tbody>
           </table>
