--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h1>Sign In</h1>
           <input class="LoginPage_InputField" type="text" name="username" placeholder="Enter Username">
           <input class="LoginPage_InputField" type="password" name="password" placeholder="Enter Password">
-          <input class="LoginPage_Button7" type="submit" value="Login">
+          <input class="LoginPage_Button" type="submit" value="Login">
         </form>
       </div>
     </main>
