--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
           <a class="Topbar_MenuItem" href="./users.html">Users</a>
         </nav>
       </div>
-      <a class="Topbar_MenuItem" href="">Logout</a>
+      <a class="Topbar_MenuItem logout-btn" href="./index.html">Logout</a>
     </div>
     <main class="MainContainer">
       <div class="ProductListingPage_PageWrapper">
@@ -66,4 +66,5 @@
     </main>
                </body>
   <script src="./scripts/script.js"></script>
+  <script src="./scripts/logout.js"></script>
 </html>
