--- a/users.html
+++ b/users.html
@@ -20,7 +20,7 @@
           <a class="Topbar_MenuItem" href="./users.html">Users</a>
         </nav>
       </div>
-      <a class="Topbar_MenuItem" href="">Logout</a>
+      <a class="Topbar_MenuItem logout-btn" href="./index.html">Logout</a>
     </div>
     <div class="UserList_PageWrapper">
       
@@ -57,4 +57,5 @@
     
   </body>
   <script src="./scripts/script.js"></script>
+  <script src="./scripts/logout.js"></script>
 </html>
