--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
           <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
           <p class="Topbar_BrandName">Kafene</p>
         </div>
-        <nav>
-          <a class="Topbar_MenuItem Topbar_Active" href="./orders.html">Orders</a>
-          <a class="Topbar_MenuItem" href="./products.html">Products</a>
-          <a class="Topbar_MenuItem" href="./users.html">Users</a>
+        <nav class="Topbar_Menu">
+        <ul class="nav_menu">
+          <li><a class="Topbar_MenuItem" href="./orders.html">Orders</a></li>
+          <li><a class="Topbar_MenuItem" href="./products.html">Products</a></li>
+          <li><a class="Topbar_MenuItem" href="./users.html">Users</a></li>
+        </ul>
         </nav>
       </div>
       <a class="Topbar_MenuItem" href="">Logout</a>
