--- a/products.html
+++ b/products.html
@@ -14,9 +14,9 @@
           <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
           <p class="Topbar_BrandName">Kafene</p>
         </div>
-        <nav>
-          <a class="Topbar_MenuItem Topbar_Active" href="./orders.html">Orders</a>
-          <a class="Topbar_MenuItem" href="./products.html">Products</a>
+        <nav >
+          <a class="Topbar_MenuItem" href="./orders.html">Orders</a>
+          <a class="Topbar_MenuItem Topbar_Active" href="./products.html">Products</a>
           <a class="Topbar_MenuItem" href="./users.html">Users</a>
         </nav>
       </div>
