--- a/users.html
+++ b/users.html
@@ -15,9 +15,9 @@
           <p class="Topbar_BrandName">Kafene</p>
         </div>
         <nav>
-          <a class="Topbar_MenuItem Topbar_Active" href="./orders.html">Orders</a>
+          <a class="Topbar_MenuItem" href="./orders.html">Orders</a>
           <a class="Topbar_MenuItem" href="./products.html">Products</a>
-          <a class="Topbar_MenuItem" href="./users.html">Users</a>
+          <a class="Topbar_MenuItem Topbar_Active" href="./users.html">Users</a>
         </nav>
       </div>
       <a class="Topbar_MenuItem" href="">Logout</a>
