--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="Topbar_BrandName">Kafene</p>
         </div>
         <nav>
-          <a class="Topbar_MenuItem Topbar_Active" href="">Orders</a>
+          <a class="Topbar_MenuItem" href="">Orders</a>
           <a class="Topbar_MenuItem" href="">Products</a>
           <a class="Topbar_MenuItem" href="">Users</a>
         </nav>
