--- a/products.html
+++ b/products.html
@@ -51,13 +51,14 @@
                 <th>Stock</th>
               </tr>
               <tbody>
-                <tr class="ProductListingPage_TableRow ProductListingPage_ExpiredRow">
-                  <td class="ProductListingPage_SecondaryText">56104-020</td>
-                  <td class="ProductListingPage_PrimaryText">Miconazole Nitrate</td>
-                  <td class="ProductListingPage_SecondaryText">Premier Brands of America Inc.</td>
-                  <td class="ProductListingPage_PrimaryText"></td>14 Aug, 2012</td>
-                  <td class="ProductListingPage_SecondaryText">$993.01</td>
-                  <td class="ProductListingPage_SecondaryText">725</td></tr>
+                <tr class="ProductListingPage_TableRow ProductListingPage_ExpiredRow" id="trWrapper">
+                  <td class="ProductListingPage_SecondaryText" id="text1"></td>
+                  <td class="ProductListingPage_PrimaryText" id="text2"></td>
+                  <td class="ProductListingPage_SecondaryText" id="text3"></td>
+                  <td class="ProductListingPage_PrimaryText" id="text4"></td>
+                  <td class="ProductListingPage_SecondaryText" id="text5"></td>
+                  <td class="ProductListingPage_SecondaryText" id="text6"></td>
+                </tr>
               </tbody>
             </table>
           </div>
