api data working

--- a/orders.html
+++ b/orders.html
@@ -66,8 +66,8 @@
                 <th>Amount</th>
                 <th>Status</th>
               </tr>
-              <tbody>
-                <tr class="Homepage_TableRow">
+              <tbody class="Homepage_TableRow">
+                <!-- <tr>
                   <td class="Homepage_SecondaryText">714-69-5617</td>
                   <td class="Homepage_PrimaryText">Sally Whebell</td>
                   <td class="Homepage_PrimaryText">
@@ -76,7 +76,7 @@
                   </td>
                   <td class="Homepage_SecondaryText">$634.2</td>
                   <td class="Homepage_PrimaryText">Delivered</td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
