--- a/products.html
+++ b/products.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/main.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <title>Assessment</title>
   </head>
   <body>
     <div class="Topbar">
       <div class="Topbar_LeftMenu">
         <div class="Topbar_LogoWrapper">
-          <img src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png" alt="Logo">
+          <img
+            src="https://edu-web-fundamentals.web.app/static/media/logo.58169365.png"
+            alt="Logo"
+          />
           <p class="Topbar_BrandName">Kafene</p>
         </div>
-        <nav >
+        <nav>
           <a class="Topbar_MenuItem" href="./orders.html">Orders</a>
-          <a class="Topbar_MenuItem Topbar_Active" href="./products.html">Products</a>
+          <a class="Topbar_MenuItem Topbar_Active" href="./products.html"
+            >Products</a
+          >
           <a class="Topbar_MenuItem" href="./users.html">Users</a>
         </nav>
       </div>
@@ -31,41 +40,43 @@
             <div class="ProductListingPage_FilterOptions">
               <p>Count: 100</p>
               <label class="ProductListingPage_FilterCheckbox">
-                <input type="checkbox" name="product-expired" checked="">
+                <input type="checkbox" name="product-expired" checked="" />
                 Expired
               </label>
               <label class="ProductListingPage_FilterCheckbox">
-                <input type="checkbox" name="product-low-stock" checked="">
+                <input type="checkbox" name="product-low-stock" checked="" />
                 Low Stock
               </label>
             </div>
           </div>
-          <div style="width: 100%;">
+          <div style="width: 100%">
             <table class="ProductListingPage_OrderTable">
               <tr>
                 <th>ID</th>
                 <th>Product Name</th>
                 <th>Product Brand</th>
-                <th style="min-width: 100px;">Expiry Date</th>
+                <th style="min-width: 100px">Expiry Date</th>
                 <th>Unit Price</th>
                 <th>Stock</th>
               </tr>
-              <tbody>
-                <tr class="ProductListingPage_TableRow ProductListingPage_ExpiredRow" id="trWrapper">
+              <tbody id="trWrapper">
+                <!-- <tr
+                  class="ProductListingPage_TableRow ProductListingPage_ExpiredRow"
+                >
                   <td class="ProductListingPage_SecondaryText" id="text1"></td>
                   <td class="ProductListingPage_PrimaryText" id="text2"></td>
                   <td class="ProductListingPage_SecondaryText" id="text3"></td>
                   <td class="ProductListingPage_PrimaryText" id="text4"></td>
                   <td class="ProductListingPage_SecondaryText" id="text5"></td>
                   <td class="ProductListingPage_SecondaryText" id="text6"></td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
         </div>
       </div>
     </main>
-               </body>
+  </body>
   <script src="./scripts/script.js"></script>
   <script src="./scripts/logout.js"></script>
 </html>
