--- a/users.html
+++ b/users.html
@@ -40,8 +40,8 @@
            <th>Gender</th>
            <th>Current Location</th>
          </tr>
-          <tbody>
-            <tr class="UserList_TableRow">
+          <tbody class="UserList_TableRow">
+            <!-- <tr class="UserList_TableRow">
               <td class="UserList_SecondaryText">1</td>
               <td class="UserList_PrimaryText">
                 <img src="https://robohash.org/estinvoluptas.jpg?size=50x50&amp;set=set1" alt="Profile Pic">
@@ -49,7 +49,7 @@
               <td class="UserList_SecondaryText">Clementius McGillreich</td>
               <td class="UserList_PrimaryText">20 Feb, 1997</td><td class="UserList_SecondaryText__3UV5v">Male</td>
               <td class="UserList_SecondaryText">Bayambang, Philippines</td>
-            </tr>
+            </tr> -->
           </tbody>
           </table>
     </div>
