order filter implemented

--- a/orders.html
+++ b/orders.html
@@ -38,21 +38,41 @@
           <div class="Homepage_FilterWrapper">
             <h3>Filters</h3>
             <div class="Homepage_FilterOptions">
-              <p>Count: 100</p>
+              <p>Count: <span class="filterCount">100</span></p>
               <label class="Homepage_FilterCheckbox">
-                <input type="checkbox" name="orders-new" checked="" />
+                <input
+                  type="checkbox"
+                  name="orders-new"
+                  checked=""
+                  value="New"
+                />
                 New
               </label>
               <label class="Homepage_FilterCheckbox">
-                <input type="checkbox" name="orders-packed" checked="" />
+                <input
+                  type="checkbox"
+                  name="orders-packed"
+                  checked=""
+                  value="Packed"
+                />
                 Packed
               </label>
               <label class="Homepage_FilterCheckbox">
-                <input type="checkbox" name="orders-transit" checked="" />
+                <input
+                  type="checkbox"
+                  name="orders-transit"
+                  checked=""
+                  value="InTransit"
+                />
                 InTransit
               </label>
               <label class="Homepage_FilterCheckbox">
-                <input type="checkbox" name="orders-delivered" checked="" />
+                <input
+                  type="checkbox"
+                  name="orders-delivered"
+                  checked=""
+                  value="Delivered"
+                />
                 Delivered
               </label>
             </div>
