product page filters done

--- a/products.html
+++ b/products.html
@@ -38,14 +38,24 @@
           <div class="ProductListingPage_FilterWrapper">
             <h3>Filters</h3>
             <div class="ProductListingPage_FilterOptions">
-              <p>Count: 100</p>
+              <p>Count: <span class="productFilterCount">100</span></p>
               <label class="ProductListingPage_FilterCheckbox">
-                <input type="checkbox" name="product-expired" checked="" />
+                <input
+                  type="checkbox"
+                  name="product-expired"
+                  checked=""
+                  value="Expired"
+                />
                 Expired
               </label>
               <label class="ProductListingPage_FilterCheckbox">
-                <input type="checkbox" name="product-low-stock" checked="" />
-                Low Stock
+                <input
+                  type="checkbox"
+                  name="product-low-stock"
+                  checked=""
+                  value="LowStock"
+                />
+                LowStock
               </label>
             </div>
           </div>
