users search done

--- a/users.html
+++ b/users.html
@@ -26,10 +26,10 @@
       
       <h1 class="UserList_MainHeading">Users</h1>
     <div class="UserList_OrdersWrapper">
-      <form class="UserList_FilterWrapper">
+      <div class="UserList_FilterWrapper">
         <input class="UserList_SearchBox" type="search" placeholder="Search by Name">
         <input type="reset" class="UserList_Button" value="Reset">
-      </form>
+      </div>
       <section>
        <table class="UserList_OrderTable">
          <tr>
