Modular codebase, added API data, README updated

--- a/users.html
+++ b/users.html
@@ -56,6 +56,6 @@
     </div>    
     
   </body>
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/usersPage.js"></script>
   <script src="./scripts/logout.js"></script>
 </html>
