--- a/orders.html
+++ b/orders.html
@@ -104,6 +104,6 @@
       </div>
     </main>
   </body>
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/ordersPage.js"></script>
   <script src="./scripts/logout.js"></script>
 </html>
