--- a/products.html
+++ b/products.html
@@ -87,6 +87,6 @@
       </div>
     </main>
   </body>
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/productsPage.js"></script>
   <script src="./scripts/logout.js"></script>
 </html>
