--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             placeholder="Enter Password"
           />
           <input class="LoginPage_Button" type="submit" value="Login" />
+          <h2>The username and password need to be the same to login.</h2>
+          
         </form>
       </div>
     </main>
